    - pred `intersperse_list_last/4`
    - pred `is_singleton/2`
    - pred `last_gap_foldl/6`
    - func `take_while_not/2`
    - pred `take_while_not/3`
    - pred `take_while_not/4`

### Changes to the `list` module

* The following predicates have been added:

    - pred `sorted_keys_match/2`

### Changes to the `pretty_printer` module

* The following predicates have been added:

    - pred `write_as_doc/3`
    - pred `write_as_doc/4`

### New `ra_list` module

* This new module contains operations on random access lists.

### Changes to the `random` module

* The old random number generator has been removed. It has been replaced by the
  new type class random number generation framework defined in this module.
  As a result, the following predicates have been removed:

   - pred `init/2`
   - pred `random/3`
   - pred `random/5`
   - pred `randmax/3`
   - pred `randcount/3`
   - pred `permutation/4`
            (replacement: `random.shuffle_list/4` or `random.shuffle_list/5`)

### Changes to the `set` module

* The following obsolete predicates and function have been removed:

   - pred `empty/1`
   - pred `non_empty/1` 
   - func `set/1`

### Changes to the `set_bbbtree` module

* The following obsolete predicates have been removed:

   - pred `empty/1`
   - pred `non_empty/1`

### Changes to the `set_ctree234` module

* The following obsolete predicates have been removed:

   - pred `empty/1`
   - pred `non_empty/1`

### Changes to the `set_ordlist` module

* The following obsolete predicates have been removed:

   - pred `empty/1`
   - pred `non_empty/1`

### Changes to the `set_tree234` module

* The following obsolete predicates have been removed:

   - pred `empty/1`
   - pred `non_empty/1`

### Changes to the `set_unordlist` module

* The following obsolete predicates have been removed:

   - pred `empty/1`
   - pred `non_empty/1`

### Changes to the `sparse_bitset` module

* The following obsolete predicates has been removed:

   - pred `empty/1`
