@@ -293,8 +293,8 @@ Changes to the Mercury standard library
 
 * The following predicates have been added:
 
-    - pred `write_as_doc/3`
-    - pred `write_as_doc/4`
+    - pred `write_doc_formatted/3`
+    - pred `write_doc_formatted/4`
 
 ### New `ra_list` module
 
@@ -619,6 +619,12 @@ Changes to the Mercury compiler
   used to set flags for the Java interpreter in the launcher shell scripts or
   batch files generated by the compiler when creating executables in the `java`
   grade.
+
+Changes to the Mercury debugger
+-------------------------------
+
+* The `dump` command has a new option: `dump -p Var` will dump the value
+  of the given variable in a prettyprinted form.
 
 Portability improvements
 ------------------------
